--- a/peacebreak/index.html
+++ b/peacebreak/index.html
@@ -3,28 +3,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PeaceBreak</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #232526, #414345);
-      color: #f4f4f4;
-      text-align: center;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(to right, #243949, #517fa4);
+      color: white;
       padding: 2em;
+      text-align: center;
     }
     h1 {
-      color: #00d2ff;
+      font-size: 2.5em;
+      margin-bottom: 0.5em;
     }
     p {
-      max-width: 600px;
-      margin: auto;
+      font-size: 1.2em;
+      max-width: 700px;
+      margin: 0 auto 2em;
+    }
+    a {
+      padding: 1em 2em;
+      background-color: #fca311;
+      color: black;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    a:hover {
+      background-color: #ffb703;
     }
   </style>
 </head>
 <body>
   <h1>PeaceBreak</h1>
-  <p>Shake or schedule your way to calm. PeaceBreak is your portable tranquility engine, triggering mindful breaks even on your busiest days. Try it now and reclaim your peace.</p>
+  <p>Take a breath, take a break. Whether by shake or schedule, PeaceBreak helps you reclaim calm in a chaotic world.</p>
+  <a href="./paymentthankyou.html">Test Payment Redirect</a>
 </body>
 </html>
