--- a/peacebreak/paymentthankyou.html
+++ b/peacebreak/paymentthankyou.html
@@ -4,31 +4,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You – PeaceBreak</title>
+  <title>Thank You</title>
   <meta http-equiv="refresh" content="5; url=peacebreak://payment-success" />
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0f2027;
-      background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
-      color: #fff;
+      font-family: 'Inter', sans-serif;
+      background-color: #f1f1f1;
       text-align: center;
       padding-top: 20vh;
+      color: #4B0082;
     }
     h1 {
       font-size: 2.5em;
-      color: #90ee90;
     }
     p {
       font-size: 1.2em;
-      max-width: 600px;
-      margin: 0 auto;
     }
   </style>
 </head>
 <body>
-  <h1>🎉 Thank You for Subscribing to PeaceBreak!</h1>
-  <p>You’ll be redirected back to the app in a few seconds…</p>
+  <h1>🎉 Thank You!</h1>
+  <p>Your subscription is confirmed. Redirecting you to the PeaceBreak app...</p>
 </body>
 </html>
