--- a/peacebreak/paymentthankyou.html
+++ b/peacebreak/paymentthankyou.html
@@ -2,28 +2,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You</title>
-  <meta http-equiv="refresh" content="5; url=peacebreak://payment-success" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thank You – PeaceBreak</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f1f1f1;
+      background: #f0f0f0;
       text-align: center;
-      padding-top: 20vh;
-      color: #4B0082;
+      padding-top: 15vh;
+      color: #4b0082;
     }
     h1 {
-      font-size: 2.5em;
+      font-size: 2.5rem;
     }
     p {
-      font-size: 1.2em;
+      font-size: 1.1rem;
+      margin: 1rem auto;
+      max-width: 500px;
     }
   </style>
 </head>
 <body>
-  <h1>🎉 Thank You!</h1>
-  <p>Your subscription is confirmed. Redirecting you to the PeaceBreak app...</p>
+  <h1>Thank You for Subscribing!</h1>
+  <p>Your PeaceBreak premium subscription is now active. We're grateful to have you with us.</p>
+  <p>You may now return to the app and enjoy your scheduled and shake-triggered moments of calm.</p>
 </body>
 </html>
