--- a/index.html
+++ b/index.html
@@ -3,73 +3,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thamizhi Studios</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
-      color: #212529;
-    }
-    header {
-      background-color: #fff;
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header nav a {
-      margin-left: 1.5rem;
-      text-decoration: none;
-      color: #4B0082;
-      font-weight: 600;
-    }
-    .hero {
-      text-align: center;
-      padding: 5rem 2rem;
-      background: linear-gradient(to right, #f5f5f5, #eaeaea);
-    }
-    .hero h1 {
-      font-size: 2.8em;
-      color: #4B0082;
-    }
-    .hero p {
-      font-size: 1.2em;
-      margin-top: 1rem;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .hero a {
-      display: inline-block;
-      margin-top: 2rem;
-      background: #6f42c1;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border-radius: 6px;
-      text-decoration: none;
-    }
-    section {
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-    .card {
-      background: #fff;
-      border-radius: 10px;
-      padding: 2rem;
-      max-width: 600px;
-      margin: 2rem auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9em;
-      background: #f1f1f1;
-    }
+    body { margin: 0; font-family: 'Inter', sans-serif; background: #f9f9f9; color: #333; }
+    header { background: #fff; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+    header nav a { margin-left: 1.5rem; text-decoration: none; color: #6f42c1; font-weight: 600; }
+    .hero { text-align: center; padding: 4rem 2rem; background: #ede7f6; }
+    .hero h1 { font-size: 3em; color: #4b0082; }
+    .hero p { font-size: 1.2em; max-width: 700px; margin: 1rem auto 2rem; }
+    .hero a { background: #6f42c1; color: #fff; padding: 0.8rem 1.5rem; border-radius: 5px; text-decoration: none; font-weight: 600; }
+    section { padding: 4rem 2rem; text-align: center; }
+    .card { background: #fff; max-width: 700px; margin: 2rem auto; padding: 2rem; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+    footer { text-align: center; padding: 2rem; font-size: 0.9em; background: #eee; }
   </style>
 </head>
 <body>
@@ -84,22 +31,24 @@
 
   <section class="hero">
     <h1>Welcome to Thamizhi Studios</h1>
-    <p>We craft thoughtful, soulful digital products — built with intention, rooted in clarity. Explore our featured project: PeaceBreak.</p>
+    <p>We build soulful, thoughtful tools that slow you down and help you reconnect with clarity. Our creations are born from real struggle, passion, and intention.</p>
     <a href="./peacebreak/index.html">Explore PeaceBreak</a>
   </section>
 
   <section>
-    <h2>🌱 Our Mission – Thamizhi Studios</h2>
+    <h2>🌱 Our Mission</h2>
     <div class="card">
-      <p><strong>At Thamizhi Studios</strong>, our mission is to build simple, beautiful tools that slow you down and reconnect you to yourself — without noise, without clutter. Every pixel has a purpose.</p>
+      <p>At <strong>Thamizhi Studios</strong>, we believe technology should serve people — not distract them. Our mission is to create intentional digital tools that offer clarity, calm, and empowerment through minimal but meaningful design.</p>
+      <p>We’re not building apps to impress. We’re building tools to support real change in people’s lives. From mindfulness to accountability, everything we make is rooted in personal experience and tested in real-world chaos.</p>
     </div>
   </section>
 
   <section>
-    <h2>🎯 Featured Project</h2>
+    <h2>🚀 Featured Project</h2>
     <div class="card">
-      <h3>PeaceBreak App</h3>
-      <p>A family-made tool for micro moments of calm. Trigger ambient peace with a shake, a tap, or a schedule. It’s mindfulness, simplified.</p>
+      <h3>PeaceBreak</h3>
+      <p>A premium ambient audio app for micro-mindfulness. PeaceBreak lets you trigger moments of peace through shake, tap, or schedule — even while your phone is locked.</p>
+      <p>Built with React Native, Expo, and Supabase, it’s designed to deliver calming breaks without effort. No distractions, no overwhelm — just moments of intentional calm.</p>
     </div>
   </section>
 
